[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gameplay/Scripts/Elements/FinishedLabel.gd" type="Script" id=1]
[ext_resource path="res://Main/Assets/Fonts/72.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main/Assets/Fonts/32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Main/Scenes/Animations/FadeAnimation.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "countdown"
length = 10.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("VBox/WinLose:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ "10", "9", "8", "7", "6", "5", "4", "3", "2", "1", "0" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBox/Statistics:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "", "Be faster next time!" ]
}

[node name="FinishedLabel" type="MarginContainer"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Theme" ]

[node name="VBox" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="WinLose" type="Label" parent="VBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 90.0
margin_right = 511.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Statistics" type="Label" parent="VBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 307.0
margin_top = 405.0
margin_right = 677.0
margin_bottom = 445.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Not finished, unfortunately :("
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="FadeAnimation" parent="." index="1" instance=ExtResource( 4 )]

anims/countdown = SubResource( 1 )

[connection signal="animation_finished" from="FadeAnimation" to="." method="_on_FadeAnimation_animation_finished"]


